--- a/suracare/suracare/Base.lproj/Main.storyboard
+++ b/suracare/suracare/Base.lproj/Main.storyboard
@@ -1,52 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gtu-vN-fVf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w6m-hj-VR8">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Container View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="rSContainerViewController" customModule="suracare" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fPQ-dv-FBb">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="fPQ-dv-FBb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="HQo-BF-OrY"/>
-                            <constraint firstAttribute="trailing" secondItem="fPQ-dv-FBb" secondAttribute="trailing" id="Oza-hX-sBy"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="fPQ-dv-FBb" secondAttribute="bottom" id="PNS-5B-FK3"/>
-                            <constraint firstItem="fPQ-dv-FBb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="a3r-hY-Tb5"/>
-                        </constraints>
-                    </view>
-                    <nil key="simulatedStatusBarMetrics"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                    <connections>
-                        <outlet property="tripTableView" destination="fPQ-dv-FBb" id="arz-oc-QeI"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <customObject id="hXE-cO-Coz"/>
-            </objects>
-            <point key="canvasLocation" x="1072" y="489"/>
-        </scene>
         <!--OnboardUI View Controller-->
         <scene sceneID="WMp-kd-MCB">
             <objects>
-                <viewController id="gtu-vN-fVf" customClass="rSOnboardUIViewController" customModule="suracare" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier=" " id="gtu-vN-fVf" customClass="rSOnboardUIViewController" customModule="suracare" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="K51-TG-ppe"/>
                         <viewControllerLayoutGuide type="bottom" id="hSG-a3-Mh0"/>
@@ -54,27 +16,60 @@
                     <view key="view" contentMode="scaleToFill" id="Ibj-kz-OcA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JIp-NG-y2p" customClass="RoundRectButton" customModule="suracare" customModuleProvider="target">
-                                <rect key="frame" x="115" y="87" width="90" height="30"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="JIp-NG-y2p" firstAttribute="leading" secondItem="Ibj-kz-OcA" secondAttribute="leadingMargin" constant="99" id="6It-0g-PHr"/>
-                            <constraint firstItem="JIp-NG-y2p" firstAttribute="top" secondItem="K51-TG-ppe" secondAttribute="bottom" constant="67" id="HOv-ok-n8f"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="JIp-NG-y2p" secondAttribute="trailing" constant="99" id="VIH-A6-cr7"/>
-                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jBx-8l-Vvv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="577" y="1048"/>
+            <point key="canvasLocation" x="523" y="926"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="0vw-ue-XBZ">
+            <objects>
+                <viewController storyboardIdentifier="rSHomeViewController" id="w6m-hj-VR8" customClass="rSHomeViewController" customModule="suracare" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c8Q-Rp-KHG"/>
+                        <viewControllerLayoutGuide type="bottom" id="xG6-05-UE8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VtL-c9-RWX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="GGg-B8-Wg6">
+                                <rect key="frame" x="1" y="20" width="318" height="548"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="otY-iN-rKp">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9eI-mG-rqd">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="GGg-B8-Wg6" secondAttribute="trailing" constant="1" id="6ug-wv-Vw9"/>
+                            <constraint firstItem="GGg-B8-Wg6" firstAttribute="top" secondItem="c8Q-Rp-KHG" secondAttribute="bottom" id="C0G-CP-88P"/>
+                            <constraint firstItem="GGg-B8-Wg6" firstAttribute="leading" secondItem="VtL-c9-RWX" secondAttribute="leading" constant="1" id="u5O-yT-Vqw"/>
+                            <constraint firstItem="xG6-05-UE8" firstAttribute="top" secondItem="GGg-B8-Wg6" secondAttribute="bottom" id="x6M-XB-kAe"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wxt-U8-x2L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1231" y="314"/>
         </scene>
     </scenes>
 </document>
