--- a/suracare/suracare/MainUserFlow.storyboard
+++ b/suracare/suracare/MainUserFlow.storyboard
@@ -3,12 +3,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Play Audio View Controller-->
         <scene sceneID="OkK-rJ-n7Z">
             <objects>
-                <viewController id="jRu-GJ-YOm" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="rSPlayAudioViewController" id="jRu-GJ-YOm" customClass="rSPlayAudioViewController" customModule="suracare" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="D4m-vq-ZNI"/>
                         <viewControllerLayoutGuide type="bottom" id="yK8-KO-T4T"/>
@@ -16,13 +17,137 @@
                     <view key="view" contentMode="scaleToFill" id="pvK-FI-G63">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7jH-XI-WFz">
+                                <rect key="frame" x="101" y="123" width="50" height="50"/>
+                                <state key="normal" image="ic_microphone"/>
+                                <connections>
+                                    <segue destination="asa-FR-Fqg" kind="presentation" identifier="Record" id="Lur-d2-cF9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DvK-Pq-XST">
+                                <rect key="frame" x="101" y="365" width="50" height="50"/>
+                                <state key="normal" image="ic_play"/>
+                                <connections>
+                                    <action selector="playAudioButtonTapped:" destination="jRu-GJ-YOm" eventType="touchUpInside" id="ycq-RD-XB0"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="dBZ-8d-6nl">
+                                <rect key="frame" x="13" y="250" width="289" height="31"/>
+                            </slider>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R3D-B3-A8h" customClass="KDCircularProgress" customModule="suracare" customModuleProvider="target">
+                                <rect key="frame" x="182" y="400" width="108" height="123"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="angle">
+                                        <real key="value" value="300"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="trackColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="startAngle">
+                                        <real key="value" value="90"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="playButton" destination="DvK-Pq-XST" id="jYs-yF-VaS"/>
+                        <outlet property="progressSlider" destination="dBZ-8d-6nl" id="RO1-Dx-vsb"/>
+                        <outlet property="recordButton" destination="7jH-XI-WFz" id="KPv-5g-ly8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lxJ-7Q-3qC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="317" y="453"/>
         </scene>
+        <!--Record View Controller-->
+        <scene sceneID="C4H-oq-q7V">
+            <objects>
+                <viewController storyboardIdentifier="rSRecordViewController" modalPresentationStyle="overCurrentContext" id="asa-FR-Fqg" customClass="rSRecordViewController" customModule="suracare" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ps5-yS-DxQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="49a-xy-mfd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wKt-BZ-7ZW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JM9-eX-79d" userLabel="contentContainerView">
+                                <rect key="frame" x="60" y="159" width="200" height="250"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1fN-Cc-8UM" customClass="KMVoiceRecordHUD" customModule="suracare" customModuleProvider="target">
+                                        <rect key="frame" x="7" y="32" width="186" height="186"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="1fN-Cc-8UM" secondAttribute="height" id="a10-9b-r1V"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="rate">
+                                                <real key="value" value="0.80000000000000004"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="fillColor">
+                                                <color key="value" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="120″" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V9t-Xa-hoL">
+                                        <rect key="frame" x="85" y="15" width="30" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to finish" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9P-y8-ICB">
+                                        <rect key="frame" x="60" y="218" width="80" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.67000000000000004" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="centerY" secondItem="1fN-Cc-8UM" secondAttribute="centerY" id="4Ce-4f-hRq"/>
+                                    <constraint firstItem="1fN-Cc-8UM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JM9-eX-79d" secondAttribute="leading" id="C8k-aN-Jmh"/>
+                                    <constraint firstItem="1fN-Cc-8UM" firstAttribute="bottom" secondItem="Q9P-y8-ICB" secondAttribute="top" id="EH7-uB-rNQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="Q9P-y8-ICB" secondAttribute="bottom" constant="15" id="FFZ-8w-M2W"/>
+                                    <constraint firstAttribute="centerX" secondItem="Q9P-y8-ICB" secondAttribute="centerX" id="GD6-9h-qXc"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1fN-Cc-8UM" secondAttribute="trailing" id="Nec-VW-Oz1"/>
+                                    <constraint firstAttribute="centerX" secondItem="V9t-Xa-hoL" secondAttribute="centerX" id="Q2u-yg-7ui"/>
+                                    <constraint firstAttribute="centerX" secondItem="1fN-Cc-8UM" secondAttribute="centerX" id="Qyw-DC-IHw"/>
+                                    <constraint firstAttribute="width" constant="200" id="T2L-NJ-NFA"/>
+                                    <constraint firstAttribute="height" constant="250" id="c3m-Ig-EYf"/>
+                                    <constraint firstItem="V9t-Xa-hoL" firstAttribute="bottom" secondItem="1fN-Cc-8UM" secondAttribute="top" id="eJN-Nk-EmW"/>
+                                    <constraint firstItem="V9t-Xa-hoL" firstAttribute="top" secondItem="JM9-eX-79d" secondAttribute="top" constant="15" id="sYe-lF-mE0"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JM9-eX-79d" firstAttribute="centerX" secondItem="wKt-BZ-7ZW" secondAttribute="centerX" id="QXO-df-Xpp"/>
+                            <constraint firstItem="JM9-eX-79d" firstAttribute="centerY" secondItem="wKt-BZ-7ZW" secondAttribute="centerY" id="Yhq-qJ-WEb"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="durationLabel" destination="V9t-Xa-hoL" id="RCD-z3-sC3"/>
+                        <outlet property="voiceRecordHUD" destination="1fN-Cc-8UM" id="v7o-cf-iHL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="63M-KR-yeg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1028" y="150"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="ic_microphone" width="50" height="50"/>
+        <image name="ic_play" width="50" height="50"/>
+    </resources>
 </document>
